Estructura del website

--- a/src/app/equipos/equipos.component.html
+++ b/src/app/equipos/equipos.component.html
@@ -4,7 +4,7 @@
 
 <nav class="equipos-navbar">
   <ul>
-    <li><a href="#menu">Menú</a></li>
+    <li><a routerLink="/">Menú</a></li> <!-- Nuevo enlace al menú -->
     <li><a (click)="scrollToSection('equipos')">Equipos</a></li>
     <li><a (click)="scrollToSection('tabla-porcentual')">Tabla Porcentual</a></li>
     <li><a (click)="scrollToSection('historia')">Historia</a></li>
